# python_web_hw5_web_socket_aiohttp

./: main.js  pyproject.toml  server.py
